--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="FUNDOEXTRA.png" alt="Descrição da imagem">
+    <img src="FUNDOBOTAOEXTRA.png" alt="Descrição da imagem">
 </body>
 </html>
